--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -1,23 +1,19 @@
-name: build apps
+name: GitHub Actions Demo
+on: [push]
+jobs:
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - uses: actions/checkout@v3     
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
+      - run: flutter --version
 
-# For now we test the frontend by just building it, in the future tests should be run here
 
-on:
-  push:
-    branches:
-      - '**'
-
-
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-java@v2
-  with:
-    distribution: 'zulu'
-    java-version: '11'
-- uses: subosito/flutter-action@v2
-  with:
-    flutter-version: '3.0.5'
-- run: flutter pub get
-- run: flutter test
-- run: flutter build apk
-- run: flutter build appbundle
