--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -14,6 +14,11 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable' # or: 'beta', 'dev' or 'master'
-      - run: flutter --version
-
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build wev
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build/web # The folder the action should deploy.
 
