--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -4,12 +4,6 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - uses: actions/checkout@v3     
       - uses: subosito/flutter-action@v2
         with:
@@ -18,6 +12,7 @@ jobs:
       - run: flutter test
       - run: flutter build web
       - name: Deploy 🚀
+        if: ${{ github.ref == 'refs/heads/develop' }}
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build/web # The folder the action should deploy.
