--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -10,9 +10,9 @@ jobs:
           channel: 'stable' # or: 'beta', 'dev' or 'master'
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build web
+      - run: flutter build --base-href=KjG-MuF-App/   web
       - name: Deploy 🚀
-        if: ${{ github.ref == 'refs/heads/develop' }}
+       # if: ${{ github.ref == 'refs/heads/develop' }}
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build/web # The folder the action should deploy.
