--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   intl: ^0.17.0
+  crypto: ^3.0.2
+  provider: ^6.0.4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
