--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   crypto: ^3.0.2
   provider: ^6.0.4
   shared_preferences: ^2.0.15
+  flutter_map: ^2.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
