--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   crypto: ^3.0.2
   provider: ^6.0.4
   shared_preferences: ^2.0.15
-  flutter_map: ^2.2.0
+
+  latlong: ^0.6.1
+  flutter_map: any
+  flutter_map_marker_cluster: any
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
