--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   flutter_map: ^3.1.0
   flutter_map_marker_cluster: any
   geocoding: ^2.0.5
+  map_launcher: ^2.5.0
+
+  url_launcher: ^6.1.10
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
