--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   intl: ^0.17.0
   crypto: ^3.0.2
   provider: ^6.0.4
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.1.0
 
   latlong: ^0.6.1
   flutter_map: ^3.1.0
@@ -48,6 +48,8 @@ dependencies:
 
   url_launcher: ^6.1.10
   flutter_html: ^2.2.1
+
+  flutter_inappwebview: ^5.7.2+3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
