--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.kjg.kjg_muf_app">
 
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <queries>
@@ -20,7 +19,7 @@
     </queries>
 
    <application
-        android:label="KjG MuF"
+        android:label="KjG App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
