--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,14 @@ dependencies:
   provider: ^6.0.4
   shared_preferences: ^2.1.0
 
-  latlong: ^0.6.1
+  #latlong: ^0.6.1
   flutter_map: ^3.1.0
   flutter_map_marker_cluster: any
   geocoding: ^2.0.5
   map_launcher: ^2.5.0
 
   url_launcher: ^6.1.10
-  flutter_html: ^2.2.1
+ # flutter_html: ^2.2.1
 
   flutter_inappwebview: ^5.7.2+3
 
