--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   provider: ^6.0.4
   shared_preferences: ^2.1.0
 
-  latlong: ^0.6.1
+  latlong2: ^0.8.0
   flutter_map: ^3.1.0
   flutter_map_marker_cluster: any
   geocoding: ^2.0.5
