--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           channel: 'stable' # or: 'beta', 'dev' or 'master'
       - run: flutter pub get
-      - run: flutter test
+      #- run: flutter test
       - run: flutter build web --base-href "/KjG-MuF-App/"
       - name: Deploy 🚀
         if: ${{ github.ref == 'refs/heads/develop' }}
