--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
+  http: ^1.1.0
   intl: ^0.17.0
   crypto: ^3.0.2
   provider: ^6.0.4
   shared_preferences: ^2.1.0
 
-  latlong2: ^0.8.0
-  flutter_map: ^3.1.0
-  flutter_map_marker_cluster: any
+  latlong2: ^0.9.0
+  flutter_map: ^5.0.0
   geocoding: ^2.0.5
   map_launcher: ^2.5.0
 
   url_launcher: ^6.1.10
-  flutter_html: ^2.2.1
+  flutter_html: ^3.0.0-beta.2
 
   flutter_inappwebview: ^5.7.2+3
 
