KJG-45: working calendar export in all webviews

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+    <string>Events aus der MiDa direkt zum Kalender hinzufuegen</string>
 </dict>
 </plist>
