--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.1
   skeletonizer: ^0.8.0
+  add_2_calendar: ^2.2.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
