KJG-45: fix Info.plist
Co-authored-by: fabitb <fthomas-barein@kjg-muenchen.de>

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,7 +49,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
-    <string>Events aus der MiDa direkt zum Kalender hinzufuegen</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
 </dict>
 </plist>
