--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.1.1
   skeletonizer: ^0.8.0
   add_2_calendar: ^2.2.5
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
