--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   skeletonizer: ^0.8.0
   add_2_calendar: ^2.2.5
   html: ^0.15.4
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
