--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   add_2_calendar: ^2.2.5
   html: ^0.15.4
   photo_view: ^0.14.0
+  csv: ^5.1.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
