--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,9 @@ flutter:
   uses-material-design: true
   generate: true
 
+  assets:
+    - assets/mausis/
+
   fonts:
     - family: SeccaKjG
       fonts:
