--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   photo_view: ^0.14.0
   csv: ^5.1.1
   flip_card: ^0.7.0
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
