--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,12 +31,18 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UIStatusBarStyle</key>
 	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -49,9 +55,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
-	<key>NSContactsUsageDescription</key>
-	<string>Events aus der MiDa direkt zum Kalender hinzufügen</string>
 </dict>
 </plist>
