--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -45,30 +45,31 @@ dependencies:
   shared_preferences: ^2.1.0
 
   latlong2: ^0.9.0
-  flutter_map: ^5.0.0
-  geocoding: ^2.0.5
-  map_launcher: ^2.5.0
+  flutter_map: ^7.0.2
+  geocoding: ^3.0.0
+  map_launcher: ^3.5.0
 
   url_launcher: ^6.1.10
   flutter_html: ^3.0.0-beta.2
   flutter_pdfview: ^1.3.1
   flutter_cache_manager: ^3.3.0
 
-  flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview: ^6.1.5
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.1
-  skeletonizer: ^0.8.0
+  skeletonizer: ^1.4.2
+  # version 3 doesn't compile on ios
   add_2_calendar: ^2.2.5
   html: ^0.15.4
-  photo_view: ^0.14.0
-  csv: ^5.1.1
+  photo_view: ^0.15.0
+  csv: ^6.0.0
   flip_card: ^0.7.0
-  mime: ^1.0.5
+  mime: ^2.0.0
   flutter_native_splash: ^2.2.16
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: ^0.14.1
   flutter_test:
     sdk: flutter
 
@@ -77,7 +78,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
