--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,4 +1,6 @@
 flutter_native_splash:
   color: "#ffffff"
-  image: "assets/app_icon.png"
+  image: "assets/splash_icon.png"
+  android_12:
+    image: "assets/splash_icon.png"
   web: false
