update gradle, AGP, update packages, switch to isar community

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
+    namespace "de.kjg.kjg_muf_app"
+
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
