--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,12 +55,15 @@ dependencies:
   flutter_cache_manager: ^3.3.0
 
   flutter_inappwebview: ^6.1.5
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  isar:
+    version: ^3.1.0+1
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs:
+    version: ^3.1.0+1
+    hosted: https://pub.isar-community.dev/
   path_provider: ^2.1.1
   skeletonizer: ^1.4.2
-  # version 3 doesn't compile on ios
-  add_2_calendar: ^2.2.5
+  add_2_calendar: ^3.0.1
   html: ^0.15.4
   photo_view: ^0.15.0
   csv: ^6.0.0
@@ -79,7 +82,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  isar_generator: ^3.1.0+1
+  isar_generator:
+    version: ^3.1.0+1
+    hosted: https://pub.isar-community.dev/
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
 
