--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   flip_card: ^0.7.0
   mime: ^2.0.0
   flutter_native_splash: ^2.2.16
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
@@ -85,8 +87,11 @@ dev_dependencies:
   isar_generator:
     version: ^3.1.0+1
     hosted: https://pub.isar-community.dev/
-  build_runner: ^2.4.6
+  build_runner: ^2.4.14
   json_serializable: ^6.7.1
+  riverpod_generator: ^2.6.3
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 
 flutter_launcher_icons:
   min_sdk_android: 21
